# ByteBuffer

./: .gitignore  BitPosition.cpp  BitPosition.h  BitPositionTest.cpp  ByteBuffer.hpp  ByteBufferTest.cpp  CMakeLists.txt  README.md
docs/: Doxyfile.in
examples/: CMakeLists.txt  main.cpp
src/: BitPosition.h  BitRange.hpp  ByteBuffer.hpp  CMakeLists.txt
tests/: BitPositionTest.cpp  ByteBufferTest.cpp  CMakeLists.txt
